src/flake8_simplify/snapshots/ruff__flake8_simplify__tests__SIM221_SIM221.py.snap
---
source: src/flake8_simplify/mod.rs
expression: checks
---
- kind:
    AOrNotA: a
  location:
    row: 1
    column: 3
  end_location:
    row: 1
    column: 13
  fix: ~
  parent: ~
- kind:
    AOrNotA: a
  location:
    row: 4
    column: 4
  end_location:
    row: 4
    column: 14
  fix: ~
  parent: ~
- kind:
    AOrNotA: a
  location:
    row: 7
    column: 4
  end_location:
    row: 7
    column: 14
  fix: ~
  parent: ~

