src/flake8_simplify/snapshots/ruff__flake8_simplify__tests__SIM222_SIM222.py.snap
---
source: src/flake8_simplify/mod.rs
expression: checks
---
- kind: OrTrue
  location:
    row: 1
    column: 8
  end_location:
    row: 1
    column: 12
  fix: ~
  parent: ~
- kind: OrTrue
  location:
    row: 4
    column: 15
  end_location:
    row: 4
    column: 19
  fix: ~
  parent: ~
- kind: OrTrue
  location:
    row: 7
    column: 14
  end_location:
    row: 7
    column: 18
  fix: ~
  parent: ~

