src/flake8_simplify/snapshots/ruff__flake8_simplify__tests__SIM401_SIM401.py.snap
---
source: src/flake8_simplify/mod.rs
expression: diagnostics
---
- kind:
    VerboseDictGetWithDefault:
      - var
      - a_dict
      - key
      - var
  location:
    row: 2
    column: 0
  end_location:
    row: 5
    column: 20
  fix:
    content: "var = a_dict.get(key, \"default1\")"
    location:
      row: 2
      column: 0
    end_location:
      row: 5
      column: 20
  parent: ~
- kind:
    VerboseDictGetWithDefault:
      - var
      - a_dict
      - key
      - var
  location:
    row: 7
    column: 0
  end_location:
    row: 10
    column: 21
  fix:
    content: "var = a_dict.get(key, \"default2\")"
    location:
      row: 7
      column: 0
    end_location:
      row: 10
      column: 21
  parent: ~
- kind:
    VerboseDictGetWithDefault:
      - var
      - a_dict
      - key
      - var
  location:
    row: 12
    column: 0
  end_location:
    row: 15
    column: 21
  fix:
    content: "var = a_dict.get(key, val1 + val2)"
    location:
      row: 12
      column: 0
    end_location:
      row: 15
      column: 21
  parent: ~

